History
=======

SCP03 supported
getting key information templates
getting extended card resources information

06/01/2020	1.4.5	Karsten Ohme
                        CMake Build System
                        SCP03 supported
                        getting key information templates
                        getting extended card resources information
                        Added LGPL OpenSSL Exception
                        Compiled against GlobalPlatform 7.0.0

10/12/2010	1.4.4   Karsten Ohme
                        Using new PC/SC plugin version

02/10/2010      1.4.3   Key Derivation available for all cards
                        Changed License to GPL (LGPL does not make sense)
                        Compiled against GlobalPlatform 6.0.0
                        enable_timer command added


01/19/2008	1.4.2   Security Domain AID is automatically chosen based
                        on AID given to the select command or default Card Manager /
                        Security Issuer Domain AID is chosen
                        Changed License to LGPL
                        Executable Modules were not reported correctly
                        Compiled against GlobalPlatform 5.0.0

08/20/2007	1.4.1   Parameters for install_for_load added and fixed
                        ico file added


12/24/2006       1.4.0  GemXpresso support
                        CAP file support is now default in examples
                        Compiled against GlobalPlatform 4.0.3

3/24/2006        1.3.1  README change
                        Synchronized to latest GlobalPlatform library
                        Cleanup
                        CVS Tag "Release-1-3-1"

12/14/2005       1.2.0  Automatic detection of package AIDs, file size (-nvCodeLimit),
                        applet AID in new install command
                        Automatic selection of Security Domain AID
                        Linked against GlobalPlatform 2.0.1 library
