@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 cmake_policy(VERSION 2.8)
 
-SET( ${PROJECT_NAME}_CURRENT 6+7 )
+SET( ${PROJECT_NAME}_CURRENT 7 )
 SET( ${PROJECT_NAME}_REVISION 0 )
 SET( ${PROJECT_NAME}_AGE 0 )
 SET(VERSION "${${PROJECT_NAME}_CURRENT}.${${PROJECT_NAME}_REVISION}.${${PROJECT_NAME}_AGE}")
